kubernetes/ufoo/10-tech/observability/prometheus/alertmanager/ingress.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-http
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`alertmanager.agrrh.com`) || Host(`alertmanager.5426b488.nip.io`)
      middlewares:
        - name: whitelist
          namespace: traefik
        - name: cors-alertmanager
          namespace: metrics
      services:
        - kind: Service
          name: alertmanager-operated
          namespace: metrics
          port: 9093
